# agent

./: LICENSE
.github/workflows/: ai-review.yml  ci.yml
agent-project/: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
agent-project/agent/: agent.py  intents.py  memory.py  parser.py  planner.py  prompt.py  reactor.py  router.py
agent-project/data/corpus/: 面试.txt
agent-project/eval/: eval_set_60.jsonl  queries.sample.jsonl  stats.jsonl
agent-project/llm/: client.py
agent-project/rag/: embedding.py  index.py  rerank.py  rewrite.py
agent-project/scripts/: build_index.py  collect_retrieval_stats.py
agent-project/tests/: test_facts_and_rewrite.py  test_llm_function_call.py  test_llm_function_call_error.py  test_memory_tool_compact.py  test_parser.py  test_parser_bad_cases.py  test_reactor_smoke.py  test_router_confidence_fallback.py  test_router_hybrid.py  test_router_pipeline.py  test_smoke.py
agent-project/tools/: __init__.py  base.py  calculator.py  retrieval.py  search.py
agent-project/utils/: logger.py
