[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-project"
version = "0.1.0"
description = "Suggestion agent scaffold with planner/executor/tooling"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
tests = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["agent", "tools", "llm", "utils"]
