[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-project"
version = "0.1.0"
description = "Suggestion agent scaffold with planner/executor/tooling"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "ollama>=0.4",
    "requests>=2.31",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
tests = ["pytest>=7.0"]
lint = ["ruff>=0.15.0"]
retrieval = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["agent", "tools", "llm", "utils", "rag"]
